--- a/index.html
+++ b/index.html
@@ -13,5 +13,33 @@
     <script src="js/main.js" defer></script>
     <title>Taeyang's Site</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Navbar -->
+    <nav id="navbar">
+      <div class="navbar__logo">
+        <img src="imgs/logo.svg" width="20px" />
+        <a href="#">TaeYang</a>
+      </div>
+      <div>
+        <ul class="navbar__menu">
+          <li class="navbar__menu__item">Home</li>
+          <li class="navbar__menu__item">About</li>
+          <li class="navbar__menu__item">Skills</li>
+          <li class="navbar__menu__item">My Work</li>
+          <li class="navbar__menu__item">Testimonials</li>
+          <li class="navbar__menu__item">Contact</li>
+        </ul>
+      </div>
+    </nav>
+    <!-- about -->
+    <section id="about"></section>
+    <!-- skills -->
+    <section id="skills"></section>
+    <!-- work -->
+    <section id="work"></section>
+    <!-- testimonials -->
+    <section id="testimonials"></section>
+    <!-- contact -->
+    <section id="contact"></section>
+  </body>
 </html>
