--- a/index.html
+++ b/index.html
@@ -31,15 +31,23 @@
         </ul>
       </div>
     </nav>
-    <!-- about -->
+
+    <!-- Home -->
+    <section id="home">
+      <img src="imgs/avatar.jpg" class="home__avatar" />
+      <h1 class="home__title">Hello, <br />I'm Dream Coder</h1>
+      <h2 class="home__description">나의 기술 설명</h2>
+      <button class="home__contact">Contact Me</button>
+    </section>
+    <!-- About -->
     <section id="about"></section>
-    <!-- skills -->
+    <!-- Skills -->
     <section id="skills"></section>
-    <!-- work -->
+    <!-- Work -->
     <section id="work"></section>
-    <!-- testimonials -->
+    <!-- Testimonials -->
     <section id="testimonials"></section>
-    <!-- contact -->
+    <!-- Contact -->
     <section id="contact"></section>
   </body>
 </html>
