--- a/index.html
+++ b/index.html
@@ -39,8 +39,55 @@
       <h2 class="home__description">나의 기술 설명</h2>
       <button class="home__contact">Contact Me</button>
     </section>
+
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+      <h1>About Me</h1>
+      <p>
+        백제 졸업, 웹하고 싶은이유, 열정 등등 Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Dolorem totam tempore placeat voluptatum!
+        Odio voluptate consequuntur, quas illo sit tenetur tempore quam
+        cupiditate quia. Voluptates nobis eius perspiciatis earum deleniti.
+      </p>
+      <div class="about__majors">
+        <div class="major">
+          <div class="major__icon">
+            <i class="fab fa-html5"></i>
+          </div>
+          <div class="major__title">Front-end</div>
+          <div class="major__description">
+            HTML, CSS, JavaScript
+          </div>
+        </div>
+
+        <div class="major">
+          <div class="major__icon">
+            <i class="fab fa-html5"></i>
+          </div>
+          <div class="major__title">Front-end</div>
+          <div class="major__description">
+            HTML, CSS, JavaScript
+          </div>
+        </div>
+
+        <div class="major">
+          <div class="major__icon">
+            <i class="fab fa-html5"></i>
+          </div>
+          <div class="major__title">Front-end</div>
+          <div class="major__description">
+            HTML, CSS, JavaScript
+          </div>
+        </div>
+      </div>
+      <div class="about__academy">
+        <div class="academy">
+          <img src="" alt="backjae" class="academy__logo" />
+          <p class="academy__name"></p>
+          <p class="academy__period"></p>
+        </div>
+      </div>
+    </section>
     <!-- Skills -->
     <section id="skills"></section>
     <!-- Work -->
