--- a/index.html
+++ b/index.html
@@ -89,7 +89,50 @@
       </div>
     </section>
     <!-- Skills -->
-    <section id="skills"></section>
+    <section id="skills">
+      <h1>Skills</h1>
+      <h2>Skills & Attributes</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, error
+        modi numquam sint unde eos dolorum iure minima tempora at saepe
+        inventore dicta reiciendis molestias quis alias magni consequatur
+        nesciunt.
+      </p>
+      <div class="skillset">
+        <div class="skillset__left">
+          <h3 class="skillset__title">Skills</h3>
+          <div class="skill">
+            <div class="skill__description">
+              <span>HTML</span>
+              <span>90%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value"></div>
+            </div>
+          </div>
+        </div>
+        <div class="skillset__right">
+          <div class="tools">
+            <h3 class="skillset__title">Tools</h3>
+            <ul class="tools__list">
+              <li><span>Visual</span></li>
+              <li><span>Android</span></li>
+              <li><span>Photo</span></li>
+              <li><span>123213</span></li>
+              <li><span>123123</span></li>
+            </ul>
+          </div>
+          <div class="etc">
+            <h3 class="skillset__title">Etc</h3>
+            <ul class="etc__list">
+              <li><span></span></li>
+              <li><span></span></li>
+              <li><span></span></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Work -->
     <section id="work"></section>
     <!-- Testimonials -->
