--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         </div>
       </div>
     </section>
+
     <!-- Skills -->
     <section id="skills">
       <h1>Skills</h1>
@@ -125,7 +126,7 @@
           <div class="etc">
             <h3 class="skillset__title">Etc</h3>
             <ul class="etc__list">
-              <li><span></span></li>
+              <li><span>Git</span></li>
               <li><span></span></li>
               <li><span></span></li>
             </ul>
@@ -133,8 +134,36 @@
         </div>
       </div>
     </section>
+
     <!-- Work -->
-    <section id="work"></section>
+    <section id="work">
+      <h1>My Work</h1>
+      <h3>Projects</h3>
+      <div class="work__categories">
+        <button class="category__btn">
+          All <span class="category__count">8</span>
+        </button>
+        <button class="category__btn">
+          Front-end <span class="category__count">4</span>
+        </button>
+        <button class="category__btn">
+          Back-end <span class="category__count">5</span>
+        </button>
+        <button class="category__btn">
+          Mobile <span class="category__count">7</span>
+        </button>
+      </div>
+
+      <div class="work__projects">
+        <a href="#" class="projects" target="blank">
+          <img src="" alt="미완성" />
+          <div class="projects__description">
+            <h3>Youtube Site</h3>
+            <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
+          </div>
+        </a>
+      </div>
+    </section>
     <!-- Testimonials -->
     <section id="testimonials"></section>
     <!-- Contact -->
