--- a/index.html
+++ b/index.html
@@ -164,8 +164,30 @@
         </a>
       </div>
     </section>
+
     <!-- Testimonials -->
-    <section id="testimonials"></section>
+    <section>
+      <h1>Testimonials</h1>
+      <h3>See What they say about me</h3>
+      <div class="testimonials">
+        <div class="testimonial">
+          <img
+            src="imgs/avatar4.jpg"
+            alt="백제 사장 이미지를 넣자"
+            class="testimonial__avatar"
+          />
+          <div class="testimonial__speech-bubble">
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab saepe
+              tempore commodi esse maxime libero quasi sed. Accusamus sapiente
+              commodi cupiditate aut dolore temporibus voluptatum perspiciatis
+              odit, dolorem unde! Quia?
+            </p>
+            <p class="name"><a href="#">백제링크를 넣자</a></p>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Contact -->
     <section id="contact"></section>
   </body>
