--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="TaeYang" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <link
       rel="shortcut icon"
@@ -155,7 +159,7 @@
       </div>
 
       <div class="work__projects">
-        <a href="#" class="projects" target="blank">
+        <a href="#" class="projects" target="_blank">
           <img src="" alt="미완성" />
           <div class="projects__description">
             <h3>Youtube Site</h3>
@@ -188,7 +192,19 @@
         </div>
       </div>
     </section>
+
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+      <h1 class="contact__title">L</h1>
+      <h2 class="contact__email">com</h2>
+      <div class="contact__links">
+        <a href="#" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+      </div>
+      <p class="contact__rights">
+        2020
+      </p>
+    </section>
   </body>
 </html>
