--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav id="navbar">
+    <nav id="navbar" class="section">
       <div class="navbar__logo">
         <img src="imgs/logo.svg" width="20px" />
         <a href="#">TaeYang</a>
@@ -37,7 +37,7 @@
     </nav>
 
     <!-- Home -->
-    <section id="home">
+    <section id="home" class="section">
       <img src="imgs/avatar.jpg" class="home__avatar" />
       <h1 class="home__title">Hello, <br />I'm Dream Coder</h1>
       <h2 class="home__description">나의 기술 설명</h2>
@@ -45,7 +45,7 @@
     </section>
 
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section">
       <h1>About Me</h1>
       <p>
         백제 졸업, 웹하고 싶은이유, 열정 등등 Lorem ipsum dolor sit amet
@@ -87,14 +87,16 @@
       <div class="about__academy">
         <div class="academy">
           <img src="" alt="backjae" class="academy__logo" />
-          <p class="academy__name"></p>
-          <p class="academy__period"></p>
+          <div class="academy__description">
+            <p class="academy__name">백제 직업 전문학교</p>
+            <p class="academy__period">날짜</p>
+          </div>
         </div>
       </div>
     </section>
 
     <!-- Skills -->
-    <section id="skills">
+    <section id="skills" class="section">
       <h1>Skills</h1>
       <h2>Skills & Attributes</h2>
       <p>
@@ -140,7 +142,7 @@
     </section>
 
     <!-- Work -->
-    <section id="work">
+    <section id="work" class="section">
       <h1>My Work</h1>
       <h3>Projects</h3>
       <div class="work__categories">
@@ -170,10 +172,10 @@
     </section>
 
     <!-- Testimonials -->
-    <section>
+    <section id="testimonials" class="section">
       <h1>Testimonials</h1>
       <h3>See What they say about me</h3>
-      <div class="testimonials">
+      <div>
         <div class="testimonial">
           <img
             src="imgs/avatar4.jpg"
@@ -194,7 +196,7 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="section">
       <h1 class="contact__title">L</h1>
       <h2 class="contact__email">com</h2>
       <div class="contact__links">
