--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <h1>My Work</h1>
       <h3>Projects</h3>
       <div class="work__categories">
-        <button class="category__btn">
+        <button class="category__btn active">
           All <span class="category__count">8</span>
         </button>
         <button class="category__btn">
@@ -164,7 +164,47 @@
 
       <div class="work__projects">
         <a href="#" class="projects" target="_blank">
-          <img src="" alt="미완성" />
+          <img src="imgs/test.jpg" alt="미완성" class="project__img" />
+          <div class="projects__description">
+            <h3>Youtube Site</h3>
+            <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
+          </div>
+        </a>
+
+        <a href="#" class="projects" target="_blank">
+          <img src="imgs/test.jpg" alt="미완성" class="project__img" />
+          <div class="projects__description">
+            <h3>Youtube Site</h3>
+            <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
+          </div>
+        </a>
+
+        <a href="#" class="projects" target="_blank">
+          <img src="imgs/test.jpg" alt="미완성" class="project__img" />
+          <div class="projects__description">
+            <h3>Youtube Site</h3>
+            <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
+          </div>
+        </a>
+
+        <a href="#" class="projects" target="_blank">
+          <img src="imgs/test.jpg" alt="미완성" class="project__img" />
+          <div class="projects__description">
+            <h3>Youtube Site</h3>
+            <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
+          </div>
+        </a>
+
+        <a href="#" class="projects" target="_blank">
+          <img src="imgs/test.jpg" alt="미완성" class="project__img" />
+          <div class="projects__description">
+            <h3>Youtube Site</h3>
+            <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
+          </div>
+        </a>
+
+        <a href="#" class="projects" target="_blank">
+          <img src="imgs/test.jpg" alt="미완성" class="project__img" />
           <div class="projects__description">
             <h3>Youtube Site</h3>
             <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
