--- a/index.html
+++ b/index.html
@@ -231,15 +231,15 @@
 
     <!-- Contact -->
     <section id="contact" class="section">
-      <h1 class="contact__title">L</h1>
-      <h2 class="contact__email">com</h2>
+      <h1 class="contact__title">Let's talk!</h1>
+      <h2 class="contact__email">ollie3195@gmail.com</h2>
       <div class="contact__links">
         <a href="#" target="_blank">
           <i class="fab fa-github"></i>
         </a>
       </div>
       <p class="contact__rights">
-        2020
+        2020 TaeYang ㆍ All rights reserved
       </p>
     </section>
   </body>
