--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
 
     <!-- Work -->
     <section id="work" class="section">
-      <h1>My Work</h1>
+        <div class="section__container">
+            <h1>My Work</h1>
       <h3>Projects</h3>
       <div class="work__categories">
         <button class="category__btn active">
@@ -207,26 +208,30 @@
 
     <!-- Testimonials -->
     <section id="testimonials" class="section">
-      <h1>Testimonials</h1>
-      <h3>See What they say about me</h3>
-      <div>
-        <div class="testimonial">
-          <img
-            src="imgs/avatar4.jpg"
-            alt="백제 사장 이미지를 넣자"
-            class="testimonial__avatar"
-          />
-          <div class="testimonial__speech-bubble">
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab saepe
-              tempore commodi esse maxime libero quasi sed. Accusamus sapiente
-              commodi cupiditate aut dolore temporibus voluptatum perspiciatis
-              odit, dolorem unde! Quia?
-            </p>
-            <p class="name"><a href="#">백제링크를 넣자</a></p>
+      <div class="section__container">
+        <h1>Testimonials</h1>
+        <h3>See What they say about me</h3>
+        <div>
+          <div class="testimonial">
+            <img
+              src="imgs/avatar4.jpg"
+              alt="백제 사장 이미지를 넣자"
+              class="testimonial__avatar"
+            />
+            <div class="testimonial__speech-bubble">
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab
+                saepe tempore commodi esse maxime libero quasi sed. Accusamus
+                sapiente commodi cupiditate aut dolore temporibus voluptatum
+                perspiciatis odit, dolorem unde! Quia?
+              </p>
+              <p class="name"><a href="#">백제링크를 넣자</a></p>
+            </div>
           </div>
         </div>
       </div>
+        </div>
+      
     </section>
 
     <!-- Contact -->
