--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="css/style.css" />
     <link
       rel="shortcut icon"
       href="imgs/favicon-96x96.png"
       type="image/x-icon"
     />
-    <script src="js/main.js" defer></script>
     <title>Taeyang's Site</title>
   </head>
   <body>
@@ -26,12 +26,14 @@
       </div>
       <div>
         <ul class="navbar__menu">
-          <li class="navbar__menu__item active">Home</li>
-          <li class="navbar__menu__item">About</li>
-          <li class="navbar__menu__item">Skills</li>
-          <li class="navbar__menu__item">My Work</li>
-          <li class="navbar__menu__item">Testimonials</li>
-          <li class="navbar__menu__item">Contact</li>
+          <li class="navbar__menu__item active" data-link="#home">Home</li>
+          <li class="navbar__menu__item" data-link="#about">About</li>
+          <li class="navbar__menu__item" data-link="#skills">Skills</li>
+          <li class="navbar__menu__item" data-link="#work">My Work</li>
+          <li class="navbar__menu__item" data-link="#testimonials">
+            Testimonials
+          </li>
+          <li class="navbar__menu__item" data-link="#contact">Contact</li>
         </ul>
       </div>
 
@@ -91,7 +93,7 @@
       </div>
       <div class="about__academy">
         <div class="academy">
-          <img src="" alt="backjae" class="academy__logo" />
+          <img src="#" alt="backjae" class="academy__logo" />
           <div class="academy__description">
             <p class="academy__name">백제 직업 전문학교</p>
             <p class="academy__period">날짜</p>
@@ -150,64 +152,65 @@
 
     <!-- Work -->
     <section id="work" class="section">
-        <div class="section__container">
-            <h1>My Work</h1>
-      <h3>Projects</h3>
-      <div class="work__categories">
-        <button class="category__btn active">
-          All <span class="category__count">8</span>
-        </button>
-        <button class="category__btn">
-          Front-end <span class="category__count">4</span>
-        </button>
-        <button class="category__btn">
-          Back-end <span class="category__count">5</span>
-        </button>
-        <button class="category__btn">
-          Mobile <span class="category__count">7</span>
-        </button>
-      </div>
+      <div class="section__container">
+        <h1>My Work</h1>
+        <h3>Projects</h3>
+        <div class="work__categories">
+          <button class="category__btn active">
+            All <span class="category__count">8</span>
+          </button>
+          <button class="category__btn">
+            Front-end <span class="category__count">4</span>
+          </button>
+          <button class="category__btn">
+            Back-end <span class="category__count">5</span>
+          </button>
+          <button class="category__btn">
+            Mobile <span class="category__count">7</span>
+          </button>
+        </div>
 
-      <div class="work__projects">
-        <a href="#" class="projects" target="_blank">
-          <img src="imgs/test.jpg" alt="미완성" class="project__img" />
-          <div class="projects__description">
-            <h3>Youtube Site</h3>
-            <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
-          </div>
-        </a>
+        <div class="work__projects">
+          <a href="#" class="projects" target="_blank">
+            <img src="imgs/test.jpg" alt="미완성" class="project__img" />
+            <div class="projects__description">
+              <h3>Youtube Site</h3>
+              <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
+            </div>
+          </a>
 
-        <a href="#" class="projects" target="_blank">
-          <img src="imgs/test.jpg" alt="미완성" class="project__img" />
-          <div class="projects__description">
-            <h3>Youtube Site</h3>
-            <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
-          </div>
-        </a>
+          <a href="#" class="projects" target="_blank">
+            <img src="imgs/test.jpg" alt="미완성" class="project__img" />
+            <div class="projects__description">
+              <h3>Youtube Site</h3>
+              <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
+            </div>
+          </a>
 
-        <a href="#" class="projects" target="_blank">
-          <img src="imgs/test.jpg" alt="미완성" class="project__img" />
-          <div class="projects__description">
-            <h3>Youtube Site</h3>
-            <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
-          </div>
-        </a>
+          <a href="#" class="projects" target="_blank">
+            <img src="imgs/test.jpg" alt="미완성" class="project__img" />
+            <div class="projects__description">
+              <h3>Youtube Site</h3>
+              <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
+            </div>
+          </a>
 
-        <a href="#" class="projects" target="_blank">
-          <img src="imgs/test.jpg" alt="미완성" class="project__img" />
-          <div class="projects__description">
-            <h3>Youtube Site</h3>
-            <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
-          </div>
-        </a>
+          <a href="#" class="projects" target="_blank">
+            <img src="imgs/test.jpg" alt="미완성" class="project__img" />
+            <div class="projects__description">
+              <h3>Youtube Site</h3>
+              <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
+            </div>
+          </a>
 
-        <a href="#" class="projects" target="_blank">
-          <img src="imgs/test.jpg" alt="미완성" class="project__img" />
-          <div class="projects__description">
-            <h3>Youtube Site</h3>
-            <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
-          </div>
-        </a>
+          <a href="#" class="projects" target="_blank">
+            <img src="imgs/test.jpg" alt="미완성" class="project__img" />
+            <div class="projects__description">
+              <h3>Youtube Site</h3>
+              <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
+            </div>
+          </a>
+        </div>
       </div>
     </section>
 
@@ -235,8 +238,6 @@
           </div>
         </div>
       </div>
-        </div>
-      
     </section>
 
     <!-- Contact -->
@@ -252,5 +253,6 @@
         2020 TaeYang ㆍ All rights reserved
       </p>
     </section>
+    <script src="js/main.js" defer></script>
   </body>
 </html>
