--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
 
     <!-- Home -->
     <section id="home" class="section">
-      <img src="imgs/avatar.jpg" class="home__avatar" />
-      <h1 class="home__title">Hello, <br />I'm Dream Coder</h1>
-      <h2 class="home__description">나의 기술 설명</h2>
-      <button class="home__contact">Contact Me</button>
+      <div class="home__container">
+        <img src="imgs/avatar.jpg" class="home__avatar" />
+        <h1 class="home__title">Hello, <br />I'm Dream Coder</h1>
+        <h2 class="home__description">나의 기술 설명</h2>
+        <button class="home__contact">Contact Me</button>
+      </div>
     </section>
 
     <!-- About -->
