--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section id="home" class="section">
       <div class="home__container">
         <img src="imgs/avatar.jpg" class="home__avatar" />
-        <h1 class="home__title">Hello, <br />I'm Dream Coder</h1>
+        <h1 class="home__title">Hello, <br />I'm Tae Yang</h1>
         <h2 class="home__description">나의 기술 설명</h2>
         <button class="home__contact">Contact Me</button>
       </div>
