--- a/index.html
+++ b/index.html
@@ -254,6 +254,11 @@
       <p class="contact__rights">
         2020 TaeYang ㆍ All rights reserved
       </p>
+
+      <!-- Arrow Up -->
+      <button class="arrow-up">
+        <i class="fas fa-arrow-up"></i>
+      </button>
     </section>
     <script src="js/main.js" defer></script>
   </body>
