--- a/index.html
+++ b/index.html
@@ -158,58 +158,68 @@
         <h1>My Work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
-          <button class="category__btn active">
-            All <span class="category__count">8</span>
+          <button class="category__btn active" data-filter="*">
+            All <span class="category__count">6</span>
           </button>
-          <button class="category__btn">
-            Front-end <span class="category__count">4</span>
+          <button class="category__btn" data-filter="front-end">
+            Front-end
+            <span class="category__count">2</span>
           </button>
-          <button class="category__btn">
-            Back-end <span class="category__count">5</span>
+          <button class="category__btn" data-filter="back-end">
+            Back-end
+            <span class="category__count">2</span>
           </button>
-          <button class="category__btn">
-            Mobile <span class="category__count">7</span>
+          <button class="category__btn" data-filter="mobile">
+            Mobile <span class="category__count">2</span>
           </button>
         </div>
 
         <div class="work__projects">
-          <a href="#" class="projects" target="_blank">
+          <a href="#" class="projects" target="_blank" data-type="front-end">
             <img src="imgs/test.jpg" alt="미완성" class="project__img" />
             <div class="projects__description">
               <h3>Youtube Site</h3>
-              <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
+              <span>설명 첨부 필요</span>
             </div>
           </a>
 
-          <a href="#" class="projects" target="_blank">
+          <a href="#" class="projects" target="_blank" data-filter="front-end">
             <img src="imgs/test.jpg" alt="미완성" class="project__img" />
             <div class="projects__description">
               <h3>Youtube Site</h3>
-              <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
+              <span>설명 첨부 필요</span>
             </div>
           </a>
 
-          <a href="#" class="projects" target="_blank">
+          <a href="#" class="projects" target="_blank" data-filter="back-end">
             <img src="imgs/test.jpg" alt="미완성" class="project__img" />
             <div class="projects__description">
               <h3>Youtube Site</h3>
-              <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
+              <span>설명 첨부 필요</span>
             </div>
           </a>
 
-          <a href="#" class="projects" target="_blank">
+          <a href="#" class="projects" target="_blank" data-filter="back-end">
             <img src="imgs/test.jpg" alt="미완성" class="project__img" />
             <div class="projects__description">
               <h3>Youtube Site</h3>
-              <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
+              <span>설명 첨부 필요</span>
             </div>
           </a>
 
-          <a href="#" class="projects" target="_blank">
+          <a href="#" class="projects" target="_blank" data-filter="mobile">
             <img src="imgs/test.jpg" alt="미완성" class="project__img" />
             <div class="projects__description">
               <h3>Youtube Site</h3>
-              <span>클론 코딩 ㄴㅇㄹㄴㅇㄹㄴㅇㄹ</span>
+              <span>설명 첨부 필요</span>
+            </div>
+          </a>
+
+          <a href="#" class="projects" target="_blank" data-filter="mobile">
+            <img src="imgs/test.jpg" alt="미완성" class="project__img" />
+            <div class="projects__description">
+              <h3>Youtube Site</h3>
+              <span>설명 첨부 필요</span>
             </div>
           </a>
         </div>
@@ -254,6 +264,11 @@
       <p class="contact__rights">
         2020 TaeYang ㆍ All rights reserved
       </p>
+
+      <!-- Arrow Up -->
+      <button class="arrow-up">
+        <i class="fas fa-arrow-up"></i>
+      </button>
     </section>
     <script src="js/main.js" defer></script>
   </body>
