--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </div>
 
         <div class="work__projects">
-          <a href="#" class="projects" target="_blank" data-type="front-end">
+          <a href="#" class="project" target="_blank" data-type="front-end">
             <img src="imgs/test.jpg" alt="미완성" class="project__img" />
             <div class="projects__description">
               <h3>Youtube Site</h3>
@@ -183,7 +183,7 @@
             </div>
           </a>
 
-          <a href="#" class="projects" target="_blank" data-filter="front-end">
+          <a href="#" class="project" target="_blank" data-type="front-end">
             <img src="imgs/test.jpg" alt="미완성" class="project__img" />
             <div class="projects__description">
               <h3>Youtube Site</h3>
@@ -191,7 +191,7 @@
             </div>
           </a>
 
-          <a href="#" class="projects" target="_blank" data-filter="back-end">
+          <a href="#" class="project" target="_blank" data-type="back-end">
             <img src="imgs/test.jpg" alt="미완성" class="project__img" />
             <div class="projects__description">
               <h3>Youtube Site</h3>
@@ -199,7 +199,7 @@
             </div>
           </a>
 
-          <a href="#" class="projects" target="_blank" data-filter="back-end">
+          <a href="#" class="project" target="_blank" data-type="back-end">
             <img src="imgs/test.jpg" alt="미완성" class="project__img" />
             <div class="projects__description">
               <h3>Youtube Site</h3>
@@ -207,7 +207,7 @@
             </div>
           </a>
 
-          <a href="#" class="projects" target="_blank" data-filter="mobile">
+          <a href="#" class="project" target="_blank" data-type="mobile">
             <img src="imgs/test.jpg" alt="미완성" class="project__img" />
             <div class="projects__description">
               <h3>Youtube Site</h3>
@@ -215,7 +215,7 @@
             </div>
           </a>
 
-          <a href="#" class="projects" target="_blank" data-filter="mobile">
+          <a href="#" class="project" target="_blank" data-type="mobile">
             <img src="imgs/test.jpg" alt="미완성" class="project__img" />
             <div class="projects__description">
               <h3>Youtube Site</h3>
