--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="home__container">
         <img src="imgs/avatar.jpg" class="home__avatar" />
         <h1 class="home__title">Hello, <br />I'm Tae Yang</h1>
-        <h2 class="home__description">나의 기술 설명</h2>
+        <h2 class="home__description">봐주셔서 감사합니다!</h2>
         <button class="home__contact">Contact Me</button>
       </div>
     </section>
@@ -56,10 +56,13 @@
     <section id="about" class="section section__container">
       <h1>About Me</h1>
       <p>
-        백제 졸업, 웹하고 싶은이유, 열정 등등 Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Dolorem totam tempore placeat voluptatum!
-        Odio voluptate consequuntur, quas illo sit tenetur tempore quam
-        cupiditate quia. Voluptates nobis eius perspiciatis earum deleniti.
+        안녕하십니까? 저는 개발자가 되고 싶은 오태양 이라고 합니다. 2019년
+        11월부터 2020년 5월 말까지 약 6개월간 백제 전문 직업학교에서 Java,
+        Android, MySql, Photoshop 등을 배우고 수료하였습니다. 수료한 뒤에는 웹에
+        흥미가 있어 html, CSS, JS, React 등을 공부하며 회사에 이바지할 수 있는
+        성실한 개발자가 되고자 정진하고 있습니다. 저에 관한 자세한 사항은 이력서
+        및 자기소개서를 봐주시길 바랍니다. 제가 할 수 있는 기술들을 밑에 간략히
+        기재 하였습니다. 읽어주셔서 감사합니다!
       </p>
       <div class="about__majors">
         <div class="major">
@@ -68,36 +71,48 @@
           </div>
           <div class="major__title">Front-end</div>
           <div class="major__description">
-            HTML, CSS, JavaScript
+            HTML, CSS, SCSS
           </div>
         </div>
 
         <div class="major">
           <div class="major__icon">
-            <i class="fab fa-html5"></i>
+            <i class="fab fa-react"></i>
           </div>
-          <div class="major__title">Front-end</div>
+          <div class="major__title">Language</div>
           <div class="major__description">
-            HTML, CSS, JavaScript
+            Java, JavaScript, React
           </div>
         </div>
 
         <div class="major">
           <div class="major__icon">
-            <i class="fab fa-html5"></i>
+            <i class="fab fa-android"></i>
           </div>
-          <div class="major__title">Front-end</div>
+          <div class="major__title">Mobile</div>
           <div class="major__description">
-            HTML, CSS, JavaScript
+            Android
           </div>
         </div>
       </div>
       <div class="about__academy">
         <div class="academy">
-          <img src="#" alt="backjae" class="academy__logo" />
           <div class="academy__description">
-            <p class="academy__name">백제 직업 전문학교</p>
-            <p class="academy__period">날짜</p>
+            <a
+              target="_blank"
+              href="https://drive.google.com/file/d/1otilh88aDz4FA5L7dSSkCYhbbVlBiZGi/view?usp=sharing"
+              ><span style="color: dodgerblue;">이력서-오태양.hwp</span></a
+            >
+
+            <p class="academy__period">
+              <a
+                target="_blank"
+                href="https://drive.google.com/file/d/1R_UuZltq2omtlCvEaDDP5VbhtCHIRn6c/view?usp=sharing"
+                ><span style="color: dodgerblue;"
+                  >자기소개서-오태양.hwp</span
+                ></a
+              >
+            </p>
           </div>
         </div>
       </div>
@@ -109,10 +124,8 @@
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
-          error modi numquam sint unde eos dolorum iure minima tempora at saepe
-          inventore dicta reiciendis molestias quis alias magni consequatur
-          nesciunt.
+          제가 사용가능한 언어들 및 도구들과 저의 실력을 입문자 기준으로
+          따져봤을때 저의 역량이 어느정도 되는지 스스로 가늠한 척도입니다.
         </p>
         <div class="skillset">
           <div class="skillset__left">
@@ -125,25 +138,70 @@
               <div class="skill__bar">
                 <div class="skill__value" style="width: 90%;"></div>
               </div>
+
+              <div class="skill__description">
+                <span>CSS</span>
+                <span>90%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 90%;"></div>
+              </div>
+
+              <div class="skill__description">
+                <span>Java</span>
+                <span>80%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 80%;"></div>
+              </div>
+
+              <div class="skill__description">
+                <span>JavaScript</span>
+                <span>70%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 70%;"></div>
+              </div>
+              <div class="skill__description">
+                <span>Android</span>
+                <span>70%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 70%;"></div>
+              </div>
+              <div class="skill__description">
+                <span>MySql</span>
+                <span>60%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 60%;"></div>
+              </div>
+              <div class="skill__description">
+                <span>React / TypeScript</span>
+                <span>50%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 50%;"></div>
+              </div>
             </div>
           </div>
           <div class="skillset__right">
             <div class="tools">
               <h3 class="skillset__title">Tools</h3>
               <ul class="tools__list">
-                <li><span>Visual</span></li>
-                <li><span>Android</span></li>
-                <li><span>Photo</span></li>
-                <li><span>123213</span></li>
-                <li><span>123123</span></li>
+                <li><span>VSCode</span></li>
+                <li><span>AndroidStudio</span></li>
+                <li><span>PhotoShop</span></li>
+                <li><span>Eclipse</span></li>
+                <li><span>Canva</span></li>
               </ul>
             </div>
             <div class="etc">
               <h3 class="skillset__title">Etc</h3>
               <ul class="etc__list">
                 <li><span>Git</span></li>
-                <li><span></span></li>
-                <li><span></span></li>
+                <li><span>Npm</span></li>
+                <li><span>Expo</span></li>
               </ul>
             </div>
           </div>
@@ -161,64 +219,114 @@
             All <span class="category__count">6</span>
           </button>
           <button class="category__btn" data-filter="front-end">
-            Front-end
+            HTML / CSS
             <span class="category__count">2</span>
           </button>
           <button class="category__btn" data-filter="back-end">
-            Back-end
+            JavaScript
             <span class="category__count">2</span>
           </button>
           <button class="category__btn" data-filter="mobile">
-            Mobile <span class="category__count">2</span>
+            React / Mobile <span class="category__count">2</span>
           </button>
         </div>
 
         <div class="work__projects">
-          <a href="#" class="project" target="_blank" data-type="front-end">
-            <img src="imgs/test.jpg" alt="미완성" class="project__img" />
+          <a
+            href="https://ohtaeyang95.github.io/KaKao/"
+            class="project"
+            target="_blank"
+            data-type="front-end"
+          >
+            <img
+              src="imgs/kakaoclonesample.png"
+              alt="Kakao Clone"
+              class="project__img"
+            />
             <div class="projects__description">
-              <h3>Youtube Site</h3>
-              <span>설명 첨부 필요</span>
+              <h3>Kakao Clone</h3>
+              <span>100% html / css 카카오 클로닝</span>
             </div>
           </a>
 
-          <a href="#" class="project" target="_blank" data-type="front-end">
-            <img src="imgs/test.jpg" alt="미완성" class="project__img" />
+          <a
+            href="https://ohtaeyang95.github.io/KaKao/"
+            class="project"
+            target="_blank"
+            data-type="front-end"
+          >
+            <img
+              src="imgs/kakaoclonesample2.png"
+              alt="Kakao Clone"
+              class="project__img"
+            />
             <div class="projects__description">
-              <h3>Youtube Site</h3>
-              <span>설명 첨부 필요</span>
+              <h3>Kakao Clone</h3>
+              <span>100% html / css 카카오 클로닝</span>
             </div>
           </a>
 
-          <a href="#" class="project" target="_blank" data-type="back-end">
-            <img src="imgs/test.jpg" alt="미완성" class="project__img" />
+          <a
+            href="https://ohtaeyang95.github.io/paint_js/"
+            class="project"
+            target="_blank"
+            data-type="back-end"
+          >
+            <img
+              src="imgs/paintjssample.png"
+              alt="paintjs"
+              class="project__img"
+            />
             <div class="projects__description">
-              <h3>Youtube Site</h3>
-              <span>설명 첨부 필요</span>
+              <h3>그림판</h3>
+              <span>js로 구현</span>
             </div>
           </a>
 
-          <a href="#" class="project" target="_blank" data-type="back-end">
-            <img src="imgs/test.jpg" alt="미완성" class="project__img" />
+          <a
+            href="https://ohtaeyang95.github.io/JavaScriptSite/"
+            class="project"
+            target="_blank"
+            data-type="back-end"
+          >
+            <img
+              src="imgs/sitesample.png"
+              alt="JavaScriptSite"
+              class="project__img"
+            />
             <div class="projects__description">
-              <h3>Youtube Site</h3>
-              <span>설명 첨부 필요</span>
+              <h3>사이트</h3>
+              <span>Js로 구현</span>
             </div>
           </a>
 
-          <a href="#" class="project" target="_blank" data-type="mobile">
-            <img src="imgs/test.jpg" alt="미완성" class="project__img" />
+          <a
+            href="https://ohtaeyang95.github.io/movie_app_2020/"
+            class="project"
+            target="_blank"
+            data-type="mobile"
+          >
+            <img src="imgs/moviesample.png" alt="미완성" class="project__img" />
             <div class="projects__description">
-              <h3>Youtube Site</h3>
-              <span>설명 첨부 필요</span>
+              <h3>영화 소개</h3>
+              <span>리액트로 구현</span>
             </div>
           </a>
 
-          <a href="#" class="project" target="_blank" data-type="mobile">
-            <img src="imgs/test.jpg" alt="미완성" class="project__img" />
+          <a
+            href="https://expo.io/@ollie3195/weather"
+            class="project"
+            target="_blank"
+            data-type="mobile"
+          >
+            <img
+              src="imgs/weathersample.png"
+              alt="weather"
+              class="project__img"
+            />
             <div class="projects__description">
-              <h3>Youtube Site</h3>
-              <span>설명 첨부 필요</span>
+              <h3>날씨 어플</h3>
+              <span>expo로 구현</span>
             </div>
           </a>
         </div>
@@ -229,22 +337,19 @@
     <section id="testimonials" class="section">
       <div class="section__container">
         <h1>Testimonials</h1>
-        <h3>See What they say about me</h3>
+
         <div>
           <div class="testimonial">
-            <img
-              src="imgs/avatar4.jpg"
-              alt="백제 사장 이미지를 넣자"
-              class="testimonial__avatar"
-            />
             <div class="testimonial__speech-bubble">
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab
-                saepe tempore commodi esse maxime libero quasi sed. Accusamus
-                sapiente commodi cupiditate aut dolore temporibus voluptatum
-                perspiciatis odit, dolorem unde! Quia?
+                백제 직업 학교에서 디자인적 요소로는 포토샵, 디자인에 관한 개념적 교육, 트렌드에 맞는 사용자 친화적인 UX/UI디자인등을 배웠습니다.
+                언어적인 측면에서 보았을 때 수강생들이 기초를 다질수 있게 하기 위하여 충분한 이해를 시키고자 한 챕터씩마다 자세하고 친절히 설명해 주셨고 
+                그 덕분에 그냥 이렇게 쓰면 구동하는구나 라기 보다는 무슨 원리로 구동되는지 이해가 되었습니다. 전반적인 지식을 알려주고 싶어하셔서 
+                데이터베이스, 네트워크 7계층, 파이어베이스 등에 관하여서도 수업을 들을 수 잇었습니다.
+                <div class=""></div>
+                
               </p>
-              <p class="name"><a href="#">백제링크를 넣자</a></p>
+              <p class="name"><a href="http://www.bj21.or.kr/">백제 직업 전문 학교</a></p>
             </div>
           </div>
         </div>
