--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <a href="src/test.html"><span>go to test!!</span></a>
+  <a href="src/main/webapp/WEB-INF/views/test.html"><span>go to test!!</span></a>
   <!-- Navbar -->
   <nav id="navbar" class="section">
     <div class="navbar__logo">
