--- a/index.html
+++ b/index.html
@@ -315,6 +315,15 @@
     </button>
   </section>
   <script src="js/main.js" defer></script>
+  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  window.OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "73a55e91-fa8c-40af-8dea-cb77f3bb8a73",
+    });
+  });
+</script>
 </body>
 
 </html>
